golden/error/parser_double_struct_argument.test
-- How would we know on which struct to put the `id` field?
-- It makes no sense to have more than one struct parameter.
-- @query f(u1: User1, u2: User2)
select 1 from users where id = :id /* :i64 */;


 --> stdin:3:16
  |
3 | -- @query f(u1: User1, u2: User2)
  |                 ^~~~~
Error: Struct arguments can only be used in queries that take a single argument.
